[package]
name = "andon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
rumqttc = { version = "0.24", features = ["use-rustls"] }
rustls = "0.22"
rustls-native-certs = "0.7"
serde_json = "1"
md-5 = "0.10"
base64 = "0.22"
rand = "0.8"
rand_distr = "0.4"
cron = "0.12"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
humantime = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
